vlib/v/parser/tests/keyword_sql_used_as_name_err.vv
fn foo(sql string) {
	println(sql)
}
fn main() {
	foo("hi")
}
